
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef void* user64_addr_t ;
typedef scalar_t__ pid_t ;
typedef scalar_t__ int8_t ;
struct TYPE_3__ {int num_events; int event_queue_depth; void* fd; void* event_list; int member_0; } ;
typedef TYPE_1__ fsevent_clone_args64 ;


 int EXIT_FAILURE ;
 int FSEVENTS_CLONE_64 ;
 int O_RDONLY ;
 int exit (int ) ;
 scalar_t__ fork () ;
 int ioctl (int,int ,TYPE_1__*) ;
 int open (char*,int ) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int racer (int*) ;

int main(){
  int fd = open("/dev/fsevents", O_RDONLY);
  if (fd == -1) {
    perror("can't open fsevents device, are you root?");
    exit(EXIT_FAILURE);
  }


  fsevent_clone_args64 arg = {0};
  int event_fd = 0;
  int8_t event = 0;


  arg.event_list = (user64_addr_t)&event;
  arg.num_events = 1;
  arg.event_queue_depth = 1;
  arg.fd = (user64_addr_t)&event_fd;

  int err = ioctl(fd, FSEVENTS_CLONE_64, &arg);

  if (err == -1) {
    perror("error in FSEVENTS_CLONE_64\n");
    exit(EXIT_FAILURE);
  }

  if (event_fd != 0) {
    printf("looks like we got a new fd %d\n", event_fd);
  } else {
    printf("no new fd\n");
  }

  pid_t pid = fork();
  if (pid == 0) {
    racer(&event_fd);
  } else {
    racer(&event_fd);
  }


  return 1;
}
